[package]
name = "tyr"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
odal = ["tyr_tasks/odal"]

[dependencies]
tyr_internal = { path = "tyr_internal" }
tyr_macros = { path = "tyr_macros" }
tyr_tasks = { path = "tyr_tasks" }

[dev-dependencies]
itertools = { workspace = true }
miette = { workspace = true }
nidhogg = { workspace = true, features = ["lola"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true }
