[package]
authors.workspace = true
name = "vision"
version.workspace = true

categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
local = []

[dependencies]
bevy = { workspace = true, default-features = false }
localization = { workspace = true }
# heimdall = { workspace = true }
# localization = { workspace = true }
miette = { workspace = true }
# nalgebra = { workspace = true }
# re_control = { workspace = true }
# serde = { workspace = true }
# yggdrasil_config = { workspace = true }
