[package]
authors.workspace = true
name = "yggdrasil_config"
version.workspace = true

categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
game_controller = { workspace = true }
miette = { workspace = true }
nalgebra = { workspace = true }
odal = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
