[package]
name = "formation"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bifrost = { workspace = true }
yggdrasil = { workspace = true }

bevy = { workspace = true }
bevy_egui = { workspace = true }