[package]
name = "re_control"
version = "0.2.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bifrost = { workspace = true }
heimdall = { workspace = true }

clap = { workspace = true, features = ["derive"] }
miette = { workspace = true }
mimalloc = { workspace = true }
nalgebra = { workspace = true }
re_control_comms = { path = "re_control_comms" }
re_crash_handler = { workspace = true }
re_sdk_comms = { workspace = true, features = ["server"] }
re_viewer = { workspace = true }
rerun = { workspace = true, features = ["ecolor", "clap"] }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
