[package]
name = "re_control"
version = "0.4.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
build_utils = { workspace = true }
heimdall = { workspace = true }
sindri = { workspace = true }

clap = { workspace = true, features = ["derive"] }
miette = { workspace = true }
mimalloc = { workspace = true }
nalgebra = { workspace = true }
re_control_comms = { path = "re_control_comms" }
re_crash_handler = { workspace = true }
re_grpc_server = { workspace = true }
re_viewer = { workspace = true }
rerun = { workspace = true, features = ["ecolor", "clap"] }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
