[package]
name = "re_control"
version = "0.9.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bifrost = { workspace = true }
build_utils = { workspace = true }
heimdall = { workspace = true }
sindri = { workspace = true }

clap = { workspace = true, features = ["derive"] }
miette = { workspace = true }
mimalloc = { workspace = true }
nalgebra = { workspace = true }
re_control_comms = { path = "re_control_comms" }
re_crash_handler = { workspace = true }
rerun = { workspace = true, features = [
  "ecolor",
  "clap",
  "server",
  "sdk",
  "native_viewer",
  "run",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = { workspace = true }
strum = { workspace = true, features = ["derive"] }
